[package]
name = "kafka-totop"
description = "TUI plotting Kafka message input rates"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/kafka-totop"
categories = ["command-line-utilities"]
keywords = ["kafka", "tui"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[[bin]]
name = "totop"
path = "main.rs"

[dependencies]
rdkafka = { version = "0.26.0", features = ["cmake_build"] }
anyhow = "1.0.44"
humantime = "2.1.0"
chrono = "0.4.19"
structopt = "0.3.23"
tui = "0.16.0"
termion = "1.5.6"
itertools = "0.10.1"
number_prefix = "0.4.0"
rand_seeder = "0.2.2"
rand = "0.8.4"

[build-dependencies]
# Force version that doesn't use cmake --paralllel
cmake = "<0.1.46"

[profile.release]
lto = "fat"
codegen-units = 1
