[package]
name = "kafka-totop"
description = "TUI plotting Kafka message input rates"
authors = ["Julius Michaelis <gitter@liftm.de>"]
repository = "https://github.com/jcaesar/kafka-totop"
categories = ["command-line-utilities"]
keywords = ["kafka", "tui"]
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"

[[bin]]
name = "totop"
path = "main.rs"

[dependencies]
rdkafka = { version = "0.28.0", features = ["cmake_build"] }
anyhow = "1.0.58"
humantime = "2.1.0"
chrono = "0.4.19"
structopt = "0.3.26"
tui = { version = "0.18.0", default-features = false, features = ['crossterm'] }
itertools = "0.10.3"
number_prefix = "0.4.0"
rand_seeder = "0.2.3"
rand = "0.8.5"
better-panic = "0.3.0"
crossterm = "0.23"

[build-dependencies]
# Force version that doesn't use cmake --paralllel
cmake = "0.1.48"

[profile.release]
lto = "fat"
codegen-units = 1
